--- a/example/repeatcraft.cfg
+++ b/example/repeatcraft.cfg
@@ -1,9 +1,9 @@
 # Label short TEs
 shortTE_size: 100
-mapfile: None
+mapfile: mapfile.tsv
 
 # LTR grouping (based on LTR_FINER result)
-ltr_finder_gff: sample_ltrfinder.gff
+ltr_finder_gff: None
 max_LTR_size: 10000
 LTR_flanking_size: 200
 
